# dbxchain

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  README-docker.md  README.md  Vagrantfile  dbxchain-contract.files  dbxchain-contract.includes  dbxchain.files  install_manifest.txt  testnet-shared-accounts.txt  testnet-shared-balances.txt  testnet-shared-vesting-balances.txt  testnet-shared-witnesses.txt
CMakeModules/: wasm.cmake
contracts/: CMakeLists.txt
contracts/dbxlib/: CMakeLists.txt  action.h  action.hpp  asset.hpp  contract.hpp  datastream.hpp  db.h  dbx.hpp  dbxlib.cpp  dispatcher.hpp  fixed_key.hpp  memory.h  memory.hpp  multi_index.hpp  print.h  print.hpp  serialize.hpp  symbol.hpp  system.h  types.hpp  vector.hpp
contracts/graphenelib/: action.hpp
contracts/musl/: CMakeLists.txt
contracts/skeleton/: skeleton.cpp
docker/: bitsharesentry.sh  default_config.ini
docs/: API.md  BUILD_UBUNTU.md  BUILD_WIN32.md  Blockchain-Objects.md  Building-on-OS-X.md  CLI-Wallet-Cookbook.md  Contribution-Guide.md  ElasticSearch-Plugin.md  Git-Flow.md  Home.md  How-To-become-an-active-witness-in-BitShares-2.0.md  How-to-setup-your-witness-for-test-net-(Ubuntu-14.04).md  How-to-setup-your-witness-for-test-net-(Ubuntu-14.04-LTS-64-bit).md  Howto-import-an-existing-delegate-as-witness-in-BitShares-2.0.md  Howto-propose-committee-actions.md  Import-BitShares-0.9.3c-wallets-into-BitShares-2.0-CLI-wallet.md  Import-account-to-cli-wallet.md  Manage-your-nodes-by-using-gnu-screen.md  Memory-Reduction-for-Nodes.md  README-debug_node.md  Scripting-websockets-easy.md  StealthTransfers.md  Web-and-light-wallets-release-procedure.md  architecture.md  blacklizard-app-finarch.md  blacklizard-app-ideas.md  design-issues.md  private-testnet.md  public-testnet.md  resolvable-bitassets.markdown
libraries/: CMakeLists.txt
libraries/app/: CMakeLists.txt  api.cpp  application.cpp  util.cpp  (+2 more)
libraries/chaind/: CMakeLists.txt  chaind.cpp  chaind.h  chaind.hpp  net.cpp  net.h
libraries/rui/: CMakeLists.txt  rnet.cpp  rnet.h
programs/: CMakeLists.txt
tools/: CMakeLists.txt  dxx.in
(+197 files in other folders)
